@@ -1,5 +1,5 @@
 /*
- * Copyright 2025 Oracle and/or its affiliates
+ * Copyright 2026 Oracle and/or its affiliates
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,12 @@
 
 package com.dbn.assistant.tool;
 
+import com.dbn.assistant.AssistantMode;
+import com.dbn.assistant.state.AssistantState;
 import com.dbn.assistant.tool.AssistantToolInfo.UtilitySpec;
+import com.dbn.database.interfaces.DatabaseCompatibilityInterface;
 import dev.langchain4j.agent.tool.Tool;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.lang.reflect.Method;
@@ -26,24 +30,34 @@ import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
+import static com.dbn.assistant.tool.AssistantToolType.SUPPORT;
+import static com.dbn.common.util.Lists.filter;
 import static com.dbn.common.util.Unsafe.cast;
 
 public class AssistantToolData {
     private static final List<AssistantToolFactory> factories = AssistantToolFactories.list();
+    private static final List<AssistantToolCategory> categories = categories();
     private static final Map<String, AssistantToolFactory<?>> utilityMappings = new ConcurrentHashMap<>();
     private static final Map<AssistantToolType, AssistantToolFactory> typeMappings = factories();
 
+    private static @NotNull List<AssistantToolCategory> categories() {
+        return factories
+                .stream()
+                .map(t -> t.getToolCategory())
+                .distinct()
+                .toList();
+    }
 
     private static Map<AssistantToolType, AssistantToolFactory> factories() {
         return factories.stream().collect(Collectors.toMap(AssistantToolFactory::getToolType, f -> f));
     }
 
-    public static AssistantToolCategory[] getToolCategories() {
-        return factories
-                .stream()
-                .map(t -> t.getToolCategory())
-                .distinct()
-                .toArray(AssistantToolCategory[]::new);
+    public static List<AssistantToolCategory> getToolCategories() {
+        return categories;
+    }
+
+    public static List<AssistantToolCategory> getSupportedToolCategories(AssistantState assistantState) {
+        return filter(getToolCategories(), c -> isSupported(c, assistantState));
     }
 
     public static List<AssistantToolType> getToolTypes(@Nullable AssistantToolCategory category) {
@@ -51,7 +65,32 @@ public class AssistantToolData {
                 .stream()
                 .filter(t -> category == null || t.getToolCategory() == category)
                 .map(t -> t.getToolType())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public static List<AssistantToolType> getSupportedToolTypes(AssistantState assistantState, @Nullable AssistantToolCategory category) {
+        List<AssistantToolType> toolTypes = getToolTypes(category);
+
+        return filter(toolTypes, t -> isSupported(t, assistantState));
+    }
+
+    public static boolean isSupported(AssistantToolType toolType, AssistantState assistantState) {
+        DatabaseCompatibilityInterface compatibility = assistantState.getConnection().getCompatibilityInterface();
+        if (!compatibility.isAssistantToolSupported(toolType)) return false;
+
+        AssistantToolCategory toolCategory = getToolCategory(toolType);
+        if (!compatibility.isAssistantToolSupported(toolCategory)) return false;
+
+        AssistantMode assistantMode = assistantState.getAssistantMode();
+        return SUPPORT.get(assistantMode).contains(toolType);
+    }
+
+    public static boolean isSupported(AssistantToolCategory toolCategory, AssistantState assistantState) {
+        DatabaseCompatibilityInterface compatibility = assistantState.getConnection().getCompatibilityInterface();
+        if (!compatibility.isAssistantToolSupported(toolCategory)) return false;
+
+        List<AssistantToolType> toolTypes = getToolTypes(toolCategory);
+        return toolTypes.stream().anyMatch(t -> isSupported(t, assistantState));
     }
 
     public static boolean isInteractiveTool(String utilityName) {
